--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
+  <title>Happy Birthday bby sayang !!! :)</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">JOANNA</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
@@ -39,17 +39,17 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday to youu!! Happy Birthday to my sweet baby, the light of my life! Every moment with you fills my heart with more love than I ever thought possible. Watching you grow, learn, and discover the world is the greatest joy I could ever ask for, and I am so incredibly proud of the person you're becoming. You bring so much happiness and laughter into my life, and I am beyond blessed to be your parent. I can't wait to see all the amazing things you'll do in this world, because I know you will make it a brighter place just by being in it. May this year be filled with even more love, joy, and wonder than the last, and may all of your dreams come true. Happy Birthday, my precious one! I love you with all my heart, today and always.
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">i love you a lottttt .</p>
+            <p class="idea-2">i wanna you to be happy always sayang.</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
+                this whole website dedicated for  you baby<br>
                 <strong>special</strong>
                 .
             </p>
@@ -65,11 +65,11 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/irene1.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">May the HASWIN always be with you! ;)</h5>
             </div>
         </div>
 
