--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Happy Birthday to my sweet baby, the light of my life! Every moment with you fills my heart with more love than I ever thought possible. Watching you grow, learn, and discover the world is the greatest joy I could ever ask for, and I am so incredibly proud of the person you're becoming. You bring so much happiness and laughter into my life, and I am beyond blessed to be your parent. I can't wait to see all the amazing things you'll do in this world, because I know you will make it a brighter place just by being in it. May this year be filled with even more love, joy, and wonder than the last, and may all of your dreams come true. Happy Birthday, my precious one! I love you with all my heart, today and always.
-                </p>
+Happy Birthday, sayang! Wishing you the happiest day because you deserve nothing less. Every moment with you is a blessing, and I'm so grateful to have you in my life. You make everything better just by being you. I can’t wait to keep making amazing memories together. I love you more than words can express, and I’m so excited for the future with you.                </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
