--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Happy Birthday, sayang! Wishing you the happiest day because you deserve nothing
             <p class="idea-2">i wanna you to be happy always sayang.</p>
             <p class="idea-3">
                 this whole website dedicated for  you baby<br>
-                <strong>special</strong>
+                <strong>SAYANGG BABYYY MUAWHHHH</strong>
                 .
             </p>
             <p class="idea-4">Because,</p>
